refactor: Clean up TokenService and tests, add UnsupportedAuthenticationMethodException